src/objects/AR_Fixed_Rate_Card_Questions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Definition__c</fullName>
        <label>Definition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <label>Discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Costs_Included__c</fullName>
        <label>Material Costs Included?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Item__c</fullName>
        <label>Per Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_to_Annual_Rebate_Scheme__c</fullName>
        <label>Subject to Annual Rebate Scheme?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Group__c</fullName>
        <label>Task Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Group_short__c</fullName>
        <label>Task_Group_short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AR_Fixed Rate Card Questions</label>
</CustomObject>